more work on datatype translation